# utempl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/src/: attributes.cpp  curry.cpp  go_interface.cpp  left_fold.cpp  make.cpp  menu.cpp  meta.cpp  overloaded.cpp  pipe.cpp  reverse.cpp  switch.cpp  times.cpp  tuple.cpp
include/utempl/: attributes.hpp  constexpr_string.hpp  go_interface.hpp  macro.hpp  menu.hpp  meta_info.hpp  optional.hpp  overloaded.hpp  reference_wrapper.hpp  tuple.hpp  type_list.hpp  utils.hpp
include/utempl/loopholes/: core.hpp  counter.hpp
src/: attributes.cpp  constexpr_string.cpp  go_interface.cpp  menu.cpp  meta_info.cpp  optional.cpp  overloaded.cpp  tuple.cpp  type_list.cpp  utempl.cpp  utils.cpp
src/loopholes/: core.cpp  counter.cpp  loopholes.cpp
tests/: go_interface.cpp  menu.cpp  overloaded.cpp
